output folder changes

--- a/code/twinterpolation.ipynb
+++ b/code/twinterpolation.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EXPLAIN ABOUT INTERPOLATION"
+    "# This is a initial version of the code. Does not analyse the entire set of data, and explanation comments will be added"
    ]
   },
   {
@@ -6337,7 +6337,7 @@
     "char myhname[100];\n",
     "\n",
     "TFile *inputfile= TFile::Open(\"../data/outputfile_negative.root\");\n",
-    "sprintf(myfname,\"htwInterpPix.root\");\n",
+    "sprintf(myfname,\"../results/htwInterpPix.root\");\n",
     "TFile *outfile = new TFile(myfname, \"RECREATE\");\n",
     "char title[65536];\n",
     "\n",
