First deliver of paper

--- a/code/paper.ipynb
+++ b/code/paper.ipynb
@@ -7,17 +7,18 @@
     "# <center>Timewalk measurements in the VeloPix ASIC</center>\n",
     "\n",
     "## 1     Introduction\n",
+    "\n",
     "During Run I, LHCb ran at a luminosity (number of collisions per $cm^{2}$ and per second) of $\\mathrm{4 \\times 10^{32}} \\mathrm{cm^{-2}}$ $\\mathrm{{s^{-1}}}$ and is expected to increase to $\\mathrm{2 \\times 10^{33}}$ $\\mathrm{m^{-2}s^{-1}}$ The luminosity is restricted by trigger on both hardware and software level and the former VELO has a readout limit of 1 MHz. To run at a higher luminosity, the hardware trigger will be refunded with a full software trigger readout system of 40 MHz. \n",
     "\n",
-    "For this, the current VELO detectors which are based on silicon micro-strip detectors will be replaced by hybrid pixel detectors with 200 $\\mathrm{\\mu m}$ thick n-on-p silicon sensors bump-bonded to VeloPix ASICs with the 40 MHz readout rate. VeloPix is based on the Timepix3 readout chip and consists of 256 $\\times$ 256 pixels of 55 $\\mathrm{\\mu m}$ pitch. \n",
+    "For this, the current VELO detectors which are based on silicon microstrip detectors will be replaced by hybrid pixel detectors with 200 $\\mathrm{\\mu m}$ thick n-on-p silicon sensors bump-bonded to VeloPix ASICs with the 40 MHz readout rate. VeloPix is based on the Timepix3 readout chip and consists of 256 $\\times$ 256 pixels of 55 $\\mathrm{\\mu m}$ pitch. \n",
     "\n",
-    "This study on the timewalk on the VeloPix ASIC aims to propose a method to quantify this effect for futther investigation on the impact on its performance.\n",
-    "\n",
+    "This study on the timewalk on the VeloPix ASIC aims to propose a method to quantify this effect for further investigation of the impact on its performance.\n",
     "\n",
     "### 1.1     VeloPix\n",
+    "\n",
     "Table 1 shows the specifications of VeloPix.  As the chip operates with a clock of 40 MHz, hits will be recorded with a precision of 25 ns. One orbit of the LHC is 3564 clock cycles or bunch crossings, and a 9-bit timestamp is used to identify each cycle. In this note, this timestamp will be referred to as BXID (bunch-crossing identification number).\n",
     "\n",
-    "The front-end of Timepix3 including the super pixel is shown in Figure 2. There is a functionality for test pulse injection which is digitally controlled. The expected detector capacitance C$_{det}$ is approximately 50 fF. With this feature it is possible injects different known amounts of charges into the pixel circuit by adjusting the TpA and TpB voltages applied to the capacitor. Then, the charge value is correlated with the digital readout value. The front-end also has a 4-bit DAC per pixel for threshold tuning.\n",
+    "The front-end of VeloPix including is shown in Figure 2. There is a functionality for test pulse injection which is digitally controlled. The expected detector capacitance C$_{det}$ is approximately 50 fF. With this feature, it is possible to inject different known amounts of charges into the pixel circuit by adjusting the TpA and TpB voltages applied to the capacitor. Then, the charge value is correlated with the digital readout value. The front-end also has a 4-bit DAC per pixel for threshold tuning.\n",
     "\n",
     "\n",
     "|                               |                                                                              |\n",
@@ -47,7 +48,7 @@
     "\n",
     "## 2      Experimental Setup and Materials\n",
     "\n",
-    "To exercise the capability of the chip, it was delevoped a compact readout system called Speedy PIxel Detector Readout (SPIDR) [3]. The SPIDR system consists of an Xilinx VC707 FPGA board with various communication interfaces, firmware, CPU subsystem and an API library. The main read-out board connects to both 10 Gb Ethernet and 1 Gb Ethernet devices.  \n",
+    "To exercise the capability of the chip, it was developed a compact readout system called Speedy PIxel Detector Readout (SPIDR) [3]. The SPIDR system consists of a Xilinx VC707 FPGA board with various communication interfaces, firmware, CPU subsystem, and an API library. The main read-out board connects to both 10 Gb Ethernet and 1 Gb Ethernet devices.  \n",
     "\n",
     "<img src=\"../deliver/images/experimental_setup.jpeg\" width=\"600\">\n",
     "\n",
@@ -61,35 +62,34 @@
     "\n",
     "<center> $Q_{in} = (VTP\\_fine - 4 \\cdot VTP\\_Coarse) \\cdot C_{det} = \\mathrm{\\Delta VTP} \\cdot C_{det}$</center>  \n",
     "\n",
-    "To configure the chip in high-speed readout configuration and apply the test tomeasure timewalk, the following steps were executed:\n",
+    "To configure the chip in high-speed readout configuration and apply the test to measure timewalk, the following steps were executed:\n",
     "\n",
     "   - **Enable GWT**\n",
     "   The SPIDR system processes the 20 Gbps scrambled data stream from the VeloPix and distributes it over 1 Gigabit Ethernet link using VELO Gigabit Wireline Transceiver (GWT).\n",
     "\n",
     "   - **Reset and enable PLL and reset GWT DLLs**\n",
-    "    Phase Locked Loop (or phase lock loop) is a control system that generates an output signal whose phase is related to the phase of the input signal. PLL alows the chip to compensate frequency fluctuations in all chips, caused by process parameter and/or temperature variations [1]. A delay-locked loop (DLL) is a digital circuit similar to a PLL, but uses a phase (=delay) variable block instead of a  frequency block variable. \n",
+    "    Phase-Locked Loop (or phase lock loop) is a control system that generates an output signal whose phase is related to the phase of the input signal. PLL allows the chip to compensate frequency fluctuations in all chips, caused by process parameters and/or temperature variations [1]. A delay-locked loop (DLL) is a digital circuit similar to a PLL but uses a phase (=delay) variable block instead of a  frequency block variable.  \n",
     "\n",
     "   - **Reset the pixel matrix**\n",
-    "    Reset the pixel before reading data.\n",
+    "    Reset the pixel before reading the data.\n",
     "    \n",
     "   - **Do general configurations to link shutter to the test pulse**\n",
-    "    It is necessary to configure the link between the shutter and test pulse. If not linked, the shutter is independent of the test pulse. Otherwise, the shutter only opens when the pulse is enabled.\n",
+    "    It is necessary to configure the link between the shutter and the test pulse. If not linked, the shutter is independent of the test pulse. Otherwise, the shutter only opens when the pulse is enabled.\n",
     "    \n",
     "   - **Sweep Pixel Array**\n",
-    "    The active columns and rows are numbered from 0 to 255. Row 0 is the one closest to and row 255 the one furthest away from the periphery. A mask is over the pixels must be applied, activating some pixels and disabling its neighbors, we avoid cross-talk between the pixels. An example of mask is shown in Figure 4. \n",
+    "    The active columns and rows are numbered from 0 to 255. Row 0 is the one closest to and row 255 the one furthest away from the periphery. A chess-like mask is applied over the pixel matrix, activating some pixels and disabling its neighbors to avoid cross-talk between the pixels. An example of a mask is shown in Figure 4. \n",
     "    \n",
-    "   After selecting the pixels to sweep the matrix, for each unmasked pixel the test pulse is enabled. \n",
-    "\n",
+    "   After selecting the pixels to sweep the matrix, for each unmasked pixel, the test pulse is enabled. \n",
     "<img src=\"../deliver/images/mask_illustration.png\" width=\"300\">\n",
     "\n",
-    "<center>Figure 4: Example of mask application in a 9x9 pixel matrix. The pixels with the bit 1 are enabled, and the pixels with the bit 0 are desabled. </center>\n",
+    "<center>Figure 4: Example of mask application in a 9x9 pixel matrix. The pixels with the bit 1 are enabled, and the pixels with the bit 0 are disabled. </center>\n",
     "\n",
     "   - **Setup the test pulse generation**\n",
-    "    There is one set of TFC commands per BXID, at 40 MHz.  TFC will make sure that the system is synchronized or that the usage of command is consistent. In this case, as we are working with TFC, the test pulse is injected into the analog front-end.\n",
+    "    There is one set of TFC commands per BXID, at 40 MHz.  TFC will make sure that the system is synchronized or that the usage of the command is consistent. In this case, as we are working with TFC, the test pulse is injected into the analog front-end.\n",
     "    \n",
-    "   Setting the test pulse voltage the values DAC Vtp\\_Coarse (fixed at 128) and Vtp\\_Fine (scanned from 0 to 1024) are writen to its respective registers. However the value $\\mathrm{\\Delta VTP = VTP\\_coarse - 4 \\cdot VTP\\_fine}$ is the one recorded for analysis. \n",
+    "   Setting the test pulse voltage the values DAC Vtp\\_Coarse (fixed at 128) and Vtp\\_Fine (scanned from 0 to 1024) are written to its respective registers. However the value $\\mathrm{\\Delta VTP = VTP\\_coarse - 4 \\cdot VTP\\_fine}$ is the one recorded for analysis. \n",
     "   \n",
-    "   It is possible to divide the 25 ns clock into 16 steps, equivalent to 1.5 ns, which is the VeloPix phase. Then, the test pulse is implemented using four parameters: the number of pulses, the test pulse phase, the number of clocks the test pulse is high and the number of clocks the test pulse is low. \n",
+    "   It is possible to divide the 25 ns clock into 16 steps, equivalent to 1.5 ns, which is the VeloPix phase. Then, the test pulse is implemented using four parameters: the number of pulses, the test pulse phase, the number of clocks the test pulse is high, and the number of clocks the test pulse is low. \n",
     "\n",
     " The VeloPix data is processed into events where each hit is associated with a timestamp. In this work, we are simulating those hits using the test pulse injection (BXID). The output is an ASCII file that contains the event number, the trigger time, and the associated hit information; namely, the column and row number, the test pulse voltage ($\\mathrm{\\Delta VTP}$), and the hit count, that depends on the number of pulses injected. This data is later decoded and stored in a ROOT tree so that the final output is a ROOT file which contains all the information related to the tracks. \n",
     "\n",
@@ -100,7 +100,7 @@
     "\n",
     "The analysis presented in this work was performed in ROOT C++ (version 6.10/04) in a Jupyter notebook environment (version 6.0.3) and is openly available at https://github.com/larissahmendes/timewalk. Although the code to generate the code is not available to reproduce, the raw data and pre-processing code are available at (ZENODO LINK).\n",
     "\n",
-    "Each pixel of the sensor has its individual circuit (see Figure 2), therefore the analysis is done pixel by pixel. We divide its 25 ns clock into 16 phases of 1.5 ns. Varying the phase, we can delay the entry of the pulse to see the moment when it changes the Bunch Crossing counter (BXID). Figure 5 shows this behavior for one $\\mathrm{\\Delta VTP}$ and one pixel only. \n",
+    "Each pixel of the sensor has its circuit (see Figure 2), therefore the analysis is done pixel by pixel. We divide its 25 ns clock into 16 phases of 1.5 ns. Varying the phase, we can delay the entry of the pulse to see the moment when it changes the Bunch Crossing counter (BXID). Figure 5 shows this behavior for one $\\mathrm{\\Delta VTP}$ and one pixel only. \n",
     "  \n",
     "<img src=\"../deliver/images/bxid_vs_phase.png\" width=\"300\">\n",
     "\n",
@@ -112,7 +112,7 @@
     "\n",
     "<center>Figure 6: BXID vs phase for multiple charges, for one pixel. Colors going from yellow (lower $\\mathrm{\\Delta VTP}$) to pink (higher $\\mathrm{\\Delta VTP}$)</center>\n",
     "\n",
-    "To quantify timewalk, the approach will be to compare the delay calculated as $\\mathrm{[BXID+(1.0/16)\\times}$ $\\mathrm{(15-phase)]}$ with the charge ($\\mathrm{\\Delta VTP}$). And since BXID and the phase are time measures, we can put them together so we can see what BIXD each voltage has (see Figure 7)."
+    "To quantify the timewalk, the approach will be to compare the delay calculated as $\\mathrm{[BXID+(1.0/16)\\times}$ $\\mathrm{(15-phase)]}$ with the charge ($\\mathrm{\\Delta VTP}$). And since BXID and the phase are time measures, we can put them together so we can see what BIXD each voltage has (see Figure 7)."
    ]
   },
   {
@@ -209,9 +209,9 @@
     "\n",
     "<center>Figure 7: Delay for multiples $\\mathrm{\\Delta VTP}$. Z axis represents the number of pulses counted. </center> \n",
     "\n",
-    "Taking the extremities of the histogram above (Figure 7), we get 3 curves that basically say which event the signal is dropping depending on the height of the pulse.\n",
+    "Taking the extremities of the histogram above (Figure 7), we get 3 curves that say which event the signal is dropping depending on the height of the pulse.\n",
     "\n",
-    "For this, we project each $\\mathrm{\\Delta VTP}$ value on the Y axis, leaving us with a \"step-like\" histograms with the delay for each charge value. We can set a height value, for example 30% of the maximum, and find the point edges (left and right) and midpoint. Figure 8 shows this projections for one of the $\\mathrm{\\Delta VTP}$ values of the histogram on figure 7. The vertical line represents the height value of 30% of the maximum count rate, where the interceptions point with the \"step\" are taken."
+    "For this, we project each $\\mathrm{\\Delta VTP}$ value on the Y axis, leaving us with a \"step-like\" histograms with the delay for each charge value. We can set a height value, for example 30% of the maximum, and find the point edges (left and right) and midpoint. Figure 8 shows this projections for one of the $\\mathrm{\\Delta VTP}$ values of the histogram on Figure 7. The vertical line represents the height value of 30% of the maximum count rate, where the interceptions point with the \"step\" are taken."
    ]
   },
   {
@@ -327,7 +327,7 @@
     "\n",
     "The first point that the histogram intercepts the line is being called \"Lower edge\", the second interception point is called \"Upper edge\". The middle point, taking the middle distance between them, is called \"Average point\".\n",
     "\n",
-    "Taking the edge points for all $\\mathrm{\\Delta VTP}$ values, we get 3 curves that basically say which event the signal is dropping depending on the height of the pulse (see Figure 9)."
+    "Taking the edge points for all $\\mathrm{\\Delta VTP}$ values, we get 3 curves that say which event the signal is dropping depending on the height of the pulse (see Figure 9)."
    ]
   },
   {
