First paper deliver

--- a/code/paper.ipynb
+++ b/code/paper.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "Table 1 shows the specifications of VeloPix.  As the chip operates with a clock of 40 MHz, hits will be recorded with a precision of 25 ns. One orbit of the LHC is 3564 clock cycles or bunch crossings, and a 9-bit timestamp is used to identify each cycle. In this note, this timestamp will be referred to as BXID (bunch-crossing identification number).\n",
     "\n",
-    "The front-end of VeloPix including is shown in Figure 2. There is a functionality for test pulse injection which is digitally controlled. The expected detector capacitance C$_{det}$ is approximately 50 fF. With this feature, it is possible to inject different known amounts of charges into the pixel circuit by adjusting the TpA and TpB voltages applied to the capacitor. Then, the charge value is correlated with the digital readout value. The front-end also has a 4-bit DAC per pixel for threshold tuning.\n",
+    "The front-end of VeloPix including is shown in Figure 1. There is a functionality for test pulse injection which is digitally controlled. The expected detector capacitance C$_{det}$ is approximately 50 fF. With this feature, it is possible to inject different known amounts of charges into the pixel circuit by adjusting the TpA and TpB voltages applied to the capacitor. Then, the charge value is correlated with the digital readout value. The front-end also has a 4-bit DAC per pixel for threshold tuning.\n",
     "\n",
     "\n",
     "|                               |                                                                              |\n",
@@ -29,36 +29,35 @@
     "| **Pixel matrix, pixel size**  | $\\mathrm{256 \\times 256}$, 55 $\\mathrm{\\mu m}$ $\\times$ 55 $\\mathrm{\\mu m}$} |\n",
     "| **Technology**                | Planar silicon, e- collection                                                |\n",
     "| **Radiation hardness**        | 400 Mrad, SEU tolerant                                                       |\n",
-    "| **Sensor type**               | 130 nm CMOS                                                                  |\n",
     "| **Maximum data rate**         | 900 Mhits/s/ASIC, 50 khits/s/pixel                                           |\n",
     "\n",
     "<center>Table 1: VeloPix specifications</center>\n",
     "             \n",
     "<img src=\"../deliver/images/front_end_diagram.png\" width=\"600\">\n",
     "\n",
-    "<center>Figure 2: A schematic of the front-end of VeloPix [3].</center>\n",
+    "<center>Figure 1: A schematic of the front-end of VeloPix [3].</center>\n",
     "\n",
     "### 1.2      Timewalk\n",
     "\n",
-    "As can be seen from Figure 3, the signal takes some time to reach the threshold.  The discriminator will detect the signal later than the actual arrival time of the hit on the chip.  This delay is called timewalk and depends on the signal amplitude. Timewalk leads to incoherence in the measurement of the z-position of a hit, which expresses as an error in the vertex tracking.\n",
+    "As can be seen from Figure 2, the signal takes some time to reach the threshold.  The discriminator will detect the signal later than the actual arrival time of the hit on the chip.  This delay is called timewalk and depends on the signal amplitude. Timewalk leads to incoherence in the measurement of the z-position of a hit, which expresses as an error in the vertex tracking.\n",
     "\n",
     "<img src=\"../deliver/images/timewalk_illustration.png\" width=\"600\">\n",
     "\n",
-    "<center>Figure 3: A schematic of the timewalk effect: Pulses of different amplitudes in the preamplifier cross the threshold level at different times. Hence, smaller amplitude signals take longer to detect.</center>\n",
+    "<center>Figure 2: A schematic of the timewalk effect: Pulses of different amplitudes in the preamplifier cross the threshold level at different times. Hence, smaller amplitude signals take longer to detect.</center>\n",
     "\n",
     "## 2      Experimental Setup and Materials\n",
     "\n",
-    "To exercise the capability of the chip, it was developed a compact readout system called Speedy PIxel Detector Readout (SPIDR) [3]. The SPIDR system consists of a Xilinx VC707 FPGA board with various communication interfaces, firmware, CPU subsystem, and an API library. The main read-out board connects to both 10 Gb Ethernet and 1 Gb Ethernet devices.  \n",
+    "To exercise the capability of the chip, it was developed a compact readout system called Speedy PIxel Detector Readout (SPIDR) [3][5]. The SPIDR system consists of a Xilinx VC707 FPGA board with various communication interfaces, firmware, CPU subsystem, and an API library. The main read-out board connects to both 10 Gb Ethernet and 1 Gb Ethernet devices.  \n",
     "\n",
     "<img src=\"../deliver/images/experimental_setup.jpeg\" width=\"600\">\n",
     "\n",
-    "<center>Figure 1:  Chip carrier board without ASICs connected to the main SPIDR board.</center>\n",
+    "<center>Figure 3:  Chip carrier board without ASICs connected to the main SPIDR board.</center>\n",
     "\n",
-    "### 2.2       Method\n",
+    "### 2.1       Method\n",
     "\n",
     "As mentioned before, in the analog part of the pixel there is also a charge injection circuit called Test Pulses. By varying the voltages of the test pulse it is possible to simulate the charges generated by particles with different energies going through the sensor. \n",
     "\n",
-    "For this test, a series of charges are applied, controlled by the DAC Vtp\\_Coarse and Vtp\\_Fine. These DACs correspond respectively to TpA and TpB in Figure 2. The injected charge value can be calculated from the analog values of Vtp\\_Coarse and Vtp\\_Fine. In this work, we are going to use directly the analog value $\\mathrm{\\Delta VTP = VTP\\_coarse - 4 \\cdot VTP\\_fine}$. But, the corresponding charge could be easily calculated by \n",
+    "For this test, a series of charges are applied, controlled by the DAC Vtp\\_Coarse and Vtp\\_Fine. These DACs correspond respectively to TpA and TpB in Figure 1. The injected charge value can be calculated from the analog values of Vtp\\_Coarse and Vtp\\_Fine. In this work, we are going to use directly the analog value $\\mathrm{\\Delta VTP = VTP\\_coarse - 4 \\cdot VTP\\_fine}$. But, the corresponding charge could be easily calculated by \n",
     "\n",
     "<center> $Q_{in} = (VTP\\_fine - 4 \\cdot VTP\\_Coarse) \\cdot C_{det} = \\mathrm{\\Delta VTP} \\cdot C_{det}$</center>  \n",
     "\n",
@@ -94,13 +93,12 @@
     " The VeloPix data is processed into events where each hit is associated with a timestamp. In this work, we are simulating those hits using the test pulse injection (BXID). The output is an ASCII file that contains the event number, the trigger time, and the associated hit information; namely, the column and row number, the test pulse voltage ($\\mathrm{\\Delta VTP}$), and the hit count, that depends on the number of pulses injected. This data is later decoded and stored in a ROOT tree so that the final output is a ROOT file which contains all the information related to the tracks. \n",
     "\n",
     "\n",
-    "\n",
     "   \n",
     "## 3      Analysis and Results\n",
     "\n",
     "The analysis presented in this work was performed in ROOT C++ (version 6.10/04) in a Jupyter notebook environment (version 6.0.3) and is openly available at https://github.com/larissahmendes/timewalk. Although the code to generate the code is not available to reproduce, the raw data and pre-processing code are available at (ZENODO LINK).\n",
     "\n",
-    "Each pixel of the sensor has its circuit (see Figure 2), therefore the analysis is done pixel by pixel. We divide its 25 ns clock into 16 phases of 1.5 ns. Varying the phase, we can delay the entry of the pulse to see the moment when it changes the Bunch Crossing counter (BXID). Figure 5 shows this behavior for one $\\mathrm{\\Delta VTP}$ and one pixel only. \n",
+    "Each pixel of the sensor has its circuit (see Figure 1), therefore the analysis is done pixel by pixel. We divide its 25 ns clock into 16 phases of 1.5 ns. Varying the phase, we can delay the entry of the pulse to see the moment when it changes the Bunch Crossing counter (BXID). Figure 5 shows this behavior for one $\\mathrm{\\Delta VTP}$ and one pixel only. \n",
     "  \n",
     "<img src=\"../deliver/images/bxid_vs_phase.png\" width=\"300\">\n",
     "\n",
@@ -149,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OBJ: TH2F\thtwAllperpix_r0_c0\tPixel (0,0) - Negative #Delta VTP : 0 at: 0x7f6a7d4a6640\n"
+      "OBJ: TH2F\thtwAllperpix_r0_c0\tPixel (0,0) - Negative #Delta VTP : 0 at: 0x7fb4894a6ca0\n"
      ]
     },
     {
@@ -173,7 +171,7 @@
     "******************************************************************************************************************/\n",
     "\n",
     "// Open input file\n",
-    "// This input file is generated using the method mentioned on section 2.2 but will not be demonstrated on this paper\n",
+    "// This input file is generated using the method mentioned on section 2.1 but will not be demonstrated on this paper\n",
     "TFile *inputfile= TFile::Open(\"../data/outputfile_negative.root\");\n",
     "\n",
     "// Setup a canvas for plotting. The arguments are a name, an optional title, and the width and height in pixels.\n",
@@ -323,7 +321,7 @@
    "source": [
     "<img src=\"../deliver/images/delay_multiple_vtp_with_edges.png\" width=\"600\">\n",
     "\n",
-    "<center>Figure 8: \"step-like\" histogram representing the projection of the previous histogram at the $\\mathrm{\\Delta VTP}$ value of 113. The points of the histograms that crosses the illustrative red line are the edges of the first histograms from this specific charge value.  $\\mathrm{\\Delta VTP}$</center> \n",
+    "<center>Figure 8: \"step-like\" histogram representing the projection of the previous histogram at the $\\mathrm{\\Delta VTP}$ value of 113. The points of the histograms that crosses the illustrative red line are the edges of the first histograms from this specific $\\mathrm{\\Delta VTP}$ value.  </center>\n",
     "\n",
     "The first point that the histogram intercepts the line is being called \"Lower edge\", the second interception point is called \"Upper edge\". The middle point, taking the middle distance between them, is called \"Average point\".\n",
     "\n",
@@ -436,7 +434,7 @@
     "\n",
     "<center>Figure 12: Minimal in-time $\\mathrm{\\Delta VTP}$. This plot is an output from TW_hists.ipynb notebook.To understand the workflow, see https://github.com/larissahmendes/timewalk/blob//workflow/workflow_planning.png</center>\n",
     "\n",
-    "We are working with a charge simulation using the input voltage $\\mathrm{\\Delta VTP}$, but as shown in section 2.2, the corresponding charge could be easily calculated.\n",
+    "We are working with a charge simulation using the input voltage $\\mathrm{\\Delta VTP}$, but as shown in section 2.1, the corresponding charge could be easily calculated.\n",
     "\n",
     "From the histogram in Figure 12, we can find a global value of $\\mathrm{\\Delta VTP}$ of almost 18 ns. This means that detecting a signal with amplitude greater than this value, the chances are that this pulse will be counted only in the next event. \n",
     "\n",
@@ -458,7 +456,7 @@
     "\n",
     "[4]  Mijke Schut.  Characterisation of the Timepix3 chipusing a gaseous detector, Feb 2015.\n",
     "\n",
-    "[5]  B. van der Heijden, J. Visser, M. van Beuzekom, H. Boterenbrood, S. Kulis, B. Munneke,and F. Schreuder.  SPIDR, a general-purpose readout system for pixel ASICs.JINST,12(02):C02040, 2017.[6]  J Visser, M van Beuzekom, Henk Boterenbrood, B van der Heijden, J I Mu ̃noz, S Kulis,B Munneke, and F Schreuder.  SPIDR: a read-out system for Medipix3 amp; Timepix3.JINST, 10(12):C12028, 2015\n",
+    "[5]  B. van der Heijden, J. Visser, M. van Beuzekom, H. Boterenbrood, S. Kulis, B. Munneke,and F. Schreuder.  SPIDR, a general-purpose readout system for pixel ASICs.JINST,12(02):C02040, 2017.\n",
     "\n"
    ]
   }
